Fri Oct 10 11:58:25 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/RTScheduling/Common_IDL_Gen.dsp: 

	  Added custom build command for idl compilation in release
	  configuration to clear build MSVC release build errors.

Fri Oct 10 11:51:42 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/RTScheduling/Fixed_Priority_Scheduler/Fixed_Priority_Scheduler.dsp: 
	* examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.dsp: 
	* tests/RTScheduling/Scheduling_Interceptor/Scheduler_Interceptor_Client.dsp:
	  
	  Added custom build command for idl compilation and updated
	  include paths in release configuration to clear build MSVC
	  release build errors.
	
	* performance-tests/Latency/Single_Threaded/server.dsp: 
	* performance-tests/Latency/Single_Threaded/client.dsp: 
	
	  Added TAO_Messaging library to the release configuration to
	  clear build MSVC release build errors.
	
Fri Oct 10 10:46:51 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/Event_Service/Event_Service.h: 
	* orbsvcs/Event_Service/Event_Service.cpp: Changed some
	  enumeration definitions (SCHED_xx to ES_SCHED_xx to get rid of
	  compiler errors in AIX. Thanks to Werner Buchert
	  <w.buchert@medat.de> for pointing this out.
	
Fri Oct 10 10:36:01 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/Metrics.dsp: Fixed build errors in MSVC release
	  builds. The release configuration did not have the right include
	  paths.

Fri Oct 10 09:48:05 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/Kokyu_dsrt_schedulers/fp_example/fp_client.dsp: 
	* examples/Kokyu_dsrt_schedulers/fp_example/fp_server.dsp: 
	* examples/Kokyu_dsrt_schedulers/mif_example/mif_server.dsp: 
	* examples/Kokyu_dsrt_schedulers/mif_example/mif_client.dsp: 
	* examples/Kokyu_dsrt_schedulers/muf_example/muf_server.dsp: 
	* examples/Kokyu_dsrt_schedulers/muf_example/muf_client.dsp: 
	  Fixed path to the idl compiler to clear MSVC Release build 
	  errors. 
